feat: register streamers
