# domain/dto/streamer.go
@@ -1,0 +1,6 @@
+package dto
+
+type StreamerDTO struct {
+	Name    string   `json:"name"`
+	Aliases []string `json:"aliases"`
+}
